fixed cv on smaller screen small white space

--- a/style/CV.css
+++ b/style/CV.css
@@ -199,7 +199,6 @@ img {
 @media screen and (max-width: 866px) {
     .cv {
         margin: 0px;
-        max-width: 80%;
         border-radius: unset;
         flex-direction: column;
     }
